swiftybook-gateway/api-gateway-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: swiftybook.io
      http:
        paths:
          - path: /customer(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: swiftybook-customer
                port:
                  number: 8080
          - path: /place(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: swiftybook-place
                port:
                  number: 8080
          - path: /booking(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: swiftybook-booking
                port:
                  number: 8080
          - path: /user(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: swiftybook-user
                port:
                  number: 8080
